# AppleCore

./: .gitignore  CMakeLists.txt  README.md  config.yaml
experiments/: .gitignore  limits.cpp  thread-start.cpp
prerender/4K/: .gitignore
samples/c1/: config.yaml
samples/c2/: config.yaml
src/: 1000s.hpp  defs.hpp  main.cpp  mandelbrot.cpp  mandelbrot.hpp  mandelbrot_metal.h  mandelbrot_metal.mm  mandelbrot_perturbative.hpp  transform.cpp  util.cpp  util.hpp
